<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">卡片大富翁</string>
    <string name="card_monopoly">卡片大富翁</string>
    <string name="my_prop">我的道具</string>
    <string name="auction">拍卖行</string>
    <string name="card_store">卡片商店</string>
    <string name="wishing_tree">许愿树</string>
    <string name="lucky_draw">幸运转盘</string>
    <string name="search">搜索</string>
    <string name="deal_records">交易记录</string>
    <string name="official_family">官方家族</string>
    <string name="game_info">游戏信息</string>
    <string name="game_ranking_list">排行榜</string>
    <string name="game_guide">游戏介绍</string>
    <string name="msg_board">留言板</string>
    <string name="game_share">游戏分享</string>
    <string name="use_props_on_ta">对TA使用道具</string>
    <string name="you_have_become_a_slave_of_x">您已经成为%1$s的奴隶</string>
    <string name="suit_detail">套装详情</string>
    <string name="suit_detail_">套装详情 》</string>
    <string name="view_suit_detail_">查看套装详情</string>
    <string name="you_do_not_have_a_suit_yet">您还没有套装</string>
    <string name="ta_card">TA的卡片</string>
    <string name="compose">合成</string>
    <string name="discard">丢弃</string>
    <string name="save_coffer">存保险箱</string>
    <string name="deal">交易</string>
    <string name="put_pocket">放入口袋</string>
    <string name="right_now">马上开通</string>
    <string name="pickup">拾取</string>
    <string name="a_card_from_my_friend">卡友丢给我的卡片</string>
    <string name="card_lost_to_ta_by_card_mate">卡友丢给TA的卡片</string>
    <string name="lose_the_card_to_ta">丢卡给TA</string>
    <string name="card_empty_seat">空位</string>
    <string name="card_seat_progress">%1$d/%1$d</string>
    <string name="see_suit_member">查看有此套装的卡友 ></string>
    <string name="suit_comment">套装评论</string>
    <string name="have_suit_limit_all_count">拥有此限量版套装的卡友(%1$s人)</string>
    <string name="have_suit_normal_all_count">拥有此套装的卡友(%1$s人)</string>
    <string name="have_suit_count">拥有%1$d套</string>
    <string name="have_suit_early">最早合成</string>
    <string name="my_missing_card">我缺失的卡片</string>
    <string name="chose_card">选择卡片</string>
    <string name="chose_suit">选择套装</string>
    <string name="find_the_card_you_want">查找想要的卡</string>
    <string name="wish">许 愿</string>
    <string name="change_wish">更 换</string>
    <string name="get_back_the_card">取回卡片</string>
    <string name="help_ta_realize">帮TA实现</string>
    <string name="ta_wish">TA的许愿</string>
    <string name="publish_msg_board">发 布</string>
    <string name="help_you_realize_wish">帮你实现了愿望</string>
    <string name="help_ta_realize_wish">帮TA实现了愿望</string>
    <string name="search_auction">以下玩家收藏了此卡片，可以交易或去 拍卖行查找 ></string>
    <string name="check_out_ta_pocket">查看TA的口袋</string>
    <string name="postscript">附言</string>
    <string name="g">G</string>
    <string name="zhang">张</string>
    <string name="add_price">需要增加</string>
    <string name="floor_price">底价</string>
    <string name="price_">一口价</string>
    <string name="continue_ta_pocket">继续查看TA的口袋 ></string>
    <string name="back_my_pocket">回到我的口袋 ></string>
    <string name="two_hour">2小时</string>
    <string name="eight_hour">8小时</string>
    <string name="sixteen_hour">16小时</string>
    <string name="clear_pocket">清空口袋</string>

    <string name="hint_please_input_card_name">请输入卡片名称</string>
    <string name="hint_please_input_suit_name">请输入套装名称</string>
    <string name="hint_please_input_friend_name">请输入好友名称</string>
    <string name="hint_please_input_my_wish">请输入我的愿望</string>
    <string name="hint_please_check_my_card">请查找想要的卡片</string>
    <string name="hint_please_bind_phone">请先绑定手机号</string>
    <string name="hint_search">请输入要购买的卡片名称</string>
    <string name="hint_please_input_message">请输入你的留言</string>
    <string name="card_friend_message">卡友留言</string>
    <string name="cancel">取消</string>
    <string name="start_price">底价</string>
    <string name="bidding_price">竞价</string>
    <string name="str_cancel_auction">取消拍卖</string>
    <string name="str_buy">购买</string>
    <string name="str_refuse_buy">不可购买</string>
    <string name="str_use">使用</string>
    <string name="str_auction">拍卖</string>
    <string name="str_retrieve_suit">取回套装</string>
    <string name="fix_price">一口价</string>
    <string name="str_auction_title">我拍卖中的卡片</string>
    <string name="str_auction_tip">请选择您要拍卖的卡片</string>
    <string name="str_store_prop">今日售出:%1$d张</string>
    <string name="str_my_prop_remain">剩余:%1$d张</string>
    <string name="str_re_bidding">重新竞价</string>
    <string name="str_retrieve_card">取回卡片</string>
    <string name="str_agree">同意</string>
    <string name="str_use_props">对TA使用道具</string>
    <string name="str_add_price">加价</string>
    <string name="str_reuse">拒绝</string>
    <string name="str_activity">限时活动</string>
    <string name="current_price">当前价</string>
    <string name="reset_time">剩余时间</string>
    <string name="saler_name">卖家:%1$s</string>
    <string name="buyer_name">买家:%1$s</string>
    <string name="count_down_time">倒计时:%1$s</string>
    <string name="card_box_count_down_minute">剩%1$d分钟</string>
    <string name="card_box_count_down_second">剩%1$d秒</string>
    <string name="getting_box_tips_">恭喜您获得%1$s</string>
    <string name="use_prop_success_">%1$s 使用成功</string>
    <string name="use_prop_failed_">%1$s 使用失败</string>
    <string name="compose_suit_success">合成套装成功</string>
    <string name="congratulations_your_compose">恭喜你合成</string>
    <string name="congratulations_your_already">恭喜你已将</string>
    <string name="five_">共5张</string>
    <string name="five_unit">共%1$d张</string>
    <string name="upgrade_suit_">升级成%1$s</string>
    <string name="reward_gold_coin">奖励金币：</string>
    <string name="reward_prop">奖励道具卡：</string>
    <string name="compose_suit_check_tips">已合成的套装可以在我的套装中查看</string>
    <string name="get_reward">获得奖励</string>
    <string name="upgrade_suit">升级套装</string>
    <string name="confirm_deal">确定交易</string>
    <string name="confirm_">确 认</string>
    <string name="add_mark">+</string>
    <string name="check_my_suit">查看我的套装</string>
    <string name="x_">x%1$d</string>
    <string name="str_rank_type_1">昨日道具狂人</string>
    <string name="str_rank_type_2">昨日衰人</string>
    <string name="str_rank_type_3">昨日交易达人</string>
    <string name="str_rank_type_4">昨日收藏大富翁</string>
    <string name="str_rank_type_5">金币大富翁</string>
    <string name="str_rank_type_6">套装组合狂人</string>
    <string name="str_open">打开</string>
    <string name="str_suit">%1$d</string>
    <string name="title_compose_suit">%1$s 套装</string>
    <string name="str_fail">购买失败,请重试</string>
    <string name="str_finish">已结束</string>
    <string name="open_box">打开宝箱</string>
    <string name="pocket_is_full">对不起，你的口袋已满请清空口袋再试</string>
    <string name="card_robot_name">卡片机器人%1$d号</string>
    <string name="collect_suit_count">已收集%1$d套</string>
    <string name="_suit_count">%1$d套</string>
    <string name="please_choose_a_card">请选择一张卡片</string>

    <string name="record_item_first">您拍卖的</string>
    <string name="record_item_bidding_fail">的竞价已被别人超越</string>
    <string name="record_item_bidding_success">的竞价成功</string>
    <string name="record_item_auction_success">的拍卖成功</string>
    <string name="record_item_auction_fail">已过期</string>
    <string name="record_item_bidding_title_fail">竞价失败</string>
    <string name="record_item_bidding_title_success">竞价成功</string>
    <string name="record_item_auction_title_success_1">您拍卖的</string>
    <string name="record_item_auction_title_success_2">已卖出</string>
    <string name="record_item_auction_title_fail">拍卖失败</string>
    <string name="record_item_bidding_again">重新竞价</string>
    <string name="record_item_bidding_received">取回卡片</string>
    <string name="record_item_trans_success">交易成功</string>
    <string name="record_item_friend_refuse">拒绝你的卡友请求</string>
    <string name="record_item_friend_add">想把你添加为好友</string>
    <string name="record_item_friend_add_success">成为您的好友</string>
    <string name="record_item_friend_delete_success">将您从卡友中删除</string>
    <string name="auction_receive_card">取回卡片</string>
    <string name="auction_receive_card_limit">%1$d小时内销毁</string>

    <string name="wish_you_owned_cards_">你已拥有%1$d张关于 </string>
    <string name="wish_you_lack_cards_">还缺少以下%1$d张卡片，即可合成关于 </string>
    <string name="wish_card"> 的卡片</string>
    <string name="wish_paperback_suit"> 的简装版套装</string>
    <string name="wish_paperback_suit_limit"> 的限量版套装</string>
    <string name="warning_not_pick_card">您未选中卡片会被丢弃，是否确认？</string>
    <string name="str_delete_title"> 提示</string>
    <string name="str_delete_content">是否删除卡友?</string>

    <string name="discard_success_">已成功丢弃卡片到</string>
    <string name="_it_pocket">的口袋</string>

    <string name="sorry_">对不起</string>
    <string name="_pocket_no_position">的口袋没有空位</string>

    <string name="five_cards_can_mix">五张同一主题的卡片才能合成一个套装哦～</string>
    <string name="str_unrevice_box">未领取%1$s</string>
    <string name="str_use_demon_card_tip">是否配合使用恶魔卡?</string>

    <string name="unlock_strong_box_tips">需要1张保险箱卡，是否解锁?</string>
    <string name="unlock">解锁</string>

    <string name="auction_fee">保管费10G</string>
    <string name="str_gift_card_title">卡片机器人赠送你一张卡片</string>
    <string name="str_gift_prop_title">卡片机器人赠送你一张道具卡</string>
    <string name="str_gift_gold_title">卡片机器人赠送你%1$dG金币</string>
    <string name="str_ok">是</string>
    <string name="str_not">否</string>

    <string name="actual_gold_coins">实得金币:</string>
    <string name="dig_box">挖宝箱</string>
    <string name="open">开</string>
    <string name="open_now">立即打开</string>
    <string name="box_position_null">空箱位</string>
    <string name="_add_friend">+ 加好友</string>
    <string name="use_props">对TA\n使用道具</string>
    <string name="props">道具卡</string>
    <string name="current_issued">本期发行</string>
    <string name="congratulations_on_getting_limit_box">恭喜你\n获得限量宝箱</string>
    <string name="current_issue_title_limit_suit">限量套装</string>
    <string name="current_issue_title_new_suit">新发普通套装</string>
    <string name="current_issue_title_cycle_suit">普通套装</string>
    <string name="type_card">卡片</string>
    <string name="type_suit">套装</string>
    <string name="type_tools">道具卡</string>
    <string name="discard_succcess">扔卡成功</string>
    <string name="type_gold">金币</string>
    <string name="back">返回</string>
    <string name="ignore_text">跳过</string>
    <string name="signature_not_set">尚未设置签名</string>
    <string name="show_suit">套装展示</string>
    <string name="choice_time">时间选择</string>

</resources>