<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="0dp"
            android:layout_height="640dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <FrameLayout
                android:layout_width="220dp"
                android:layout_height="220dp">

                <ImageView
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:src="@mipmap/ic_limit_box_tips_halo"
                    android:contentDescription="@string/open" />

                <com.kotlin.android.card.monopoly.widget.card.image.BoxImageView
                    android:id="@+id/boxImageView"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>


            <TextView
                android:id="@+id/titleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/congratulations_on_getting_limit_box"
                android:textColor="@color/color_ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/closeView"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:contentDescription="@string/card_monopoly"
                android:src="@drawable/ic_dialog_close" />
        </LinearLayout>
    </FrameLayout>

</androidx.core.widget.NestedScrollView>