<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <FrameLayout
        android:id="@+id/panelView"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:background="@mipmap/ic_dialog_panel_suit_compose_success"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="60dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <com.kotlin.android.card.monopoly.widget.card.image.SuitImageView
                android:id="@+id/suitImageView"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compose_suit_success"
                    android:textColor="@color/color_feb12a"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/congratulations_your_compose"
                    android:textColor="@color/color_ffffff"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/color_ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="哪吒之魔童降世 套装" />

            </LinearLayout>
        </LinearLayout>

        <com.kotlin.android.card.monopoly.widget.card.view.SuitCardView
            android:id="@+id/suitCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:layout_gravity="bottom">

            <com.kotlin.android.card.monopoly.widget.dialog.view.RewardView
                android:id="@+id/rewardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/actionView"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/color_feb12a"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/check_my_suit"
                android:textColor="@color/color_ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/compose_suit_check_tips"
                android:textColor="@color/color_8798af"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/closeView"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/card_monopoly"
        android:src="@drawable/ic_dialog_close" />
</LinearLayout>