<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="35dp">

    <LinearLayout
        android:id="@+id/llTime"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llFixPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/reset_time"
            android:textColor="@color/color_4e5e73"
            android:textSize="@dimen/offset_12sp" />

        <ImageView
            android:id="@+id/ivTimeOrder"
            android:layout_width="@dimen/offset_39px"
            android:layout_height="@dimen/offset_30px"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_order_dis" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFixPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llCurrentPrice"
        app:layout_constraintStart_toEndOf="@+id/llTime"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFixPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/fix_price"
            android:textColor="@color/color_4e5e73"
            android:textSize="@dimen/offset_12sp" />

        <ImageView
            android:id="@+id/ivFixOrder"
            android:layout_width="@dimen/offset_39px"
            android:layout_height="@dimen/offset_30px"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_order_dis" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCurrentPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llFixPrice"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCurrentOrder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/current_price"
            android:textColor="@color/color_4e5e73"
            android:textSize="@dimen/offset_12sp" />

        <ImageView
            android:id="@+id/ivCurrentOrder"
            android:layout_width="@dimen/offset_39px"
            android:layout_height="@dimen/offset_30px"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_order_dis" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>